# grn-pathways

./: .ghci  .gitignore  .hgignore  CompleteGraph.hs  Graphviz.hs  GrnSim  GrnSim.hs  LICENSE  Parse.hs  README  README.md  StateTransition.hs  TODO  dtest.dot  gendat  genp0  genp0-00005  gold.txt  goldstandard.txt  grn-easy.pw  grn.cabal  grn.pw  grnsim  grntools.cabal  nemo.pw  nfkb-cluster.dot  nfkb-easy.pw  nfkb-hard.pw  nfkb-super.pw  nfkb.pw  paper_1.lyx  plot.hs  simruns
GRN/: DataFlow.hs  Density.hs  EM.hs  Fuzzed.hs  Graphviz.hs  Matrix.hs  Parse.hs  Render.hs  Sparse.hs  SparseLib.hs  StateTransition.hs  Types.hs  Uncertainty.hs  Utils.hs
paper/: nemo_2.dot  nfkb.bib  out3.dot  paper_1.lyx
pws/: base.pw  cont1.pw  cont2.pw  cont3.pw  cont4.pw  grn-easy.pw  grn.pw  nemo.pw  nemo_2.pw  nfimmune.pw  nfkb-hard.pw  nfkb-moham.pw  nfkb-super.pw  nfred.pw  p53.pw  san.pw  sri.pw  synth2.pw  synthetic.pw  test.pw
pws/df/: base0.pw  base1.pw  base2.pw  base3.pw
tests/: tests.hs
tests/Tests/: Helpers.hs  Parse.hs
