Name:                grn
Version:             0.1
Description:         GRN inference from Pathways
License:             GPL
License-file:        LICENSE
Author:              Jason Knight
Maintainer:          binarybana@gmail.com
Build-Type:          Simple
Cabal-Version:	     >=1.2

Executable GrnSim
  Main-is:	        GrnSim.hs
  Build-Depends:    base >= 4,fgl,parsec3,graphviz,containers,process,
                    regex-posix,directory,filepath,parseargs,Graphalyze
  ghc-options:
        -rtsopts
